[package]
authors = ["Jeff Glaum <jeffglaum@live.com>"]
edition = "2018"
readme = "README.md"
name = "is31fl3743b-embassy"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
rtt-target = "0.5.0"
embassy-stm32 = { version = "0.1.0", features = [
    "time-driver-any",
    "stm32g431kb",
] }
embassy-executor = { version = "0.6.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-time = { version = "0.3.2", features = ["tick-hz-32_768"] }
is31fl3743b-driver = { git = "https://github.com/pop-project/is31fl3743b.git", features = [
    "is_blocking",
] }
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
embassy-embedded-hal = "0.2.0"
embassy-sync = "0.6.0"
embedded-hal-async = "1.0.0"

[workspace]
resolver = "2"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "is31fl3743b-embassy"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
