[package]
authors = ["Jeff Glaum <jeffglaum@live.com>"]
edition = "2018"
readme = "README.md"
name = "is31fl3743b-embassy"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
embassy-stm32 = { version = "0.1.0", features = [
    "time-driver-any",
    "stm32g431kb",
] }
embassy-executor = { version = "0.6.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
is31fl3743b-driver = { git = "https://github.com/pop-project/is31fl3743b.git", features = [
    "is_blocking",
] }
embedded-hal-bus = "0.2.0"
defmt = "0.3.8"

[workspace]
resolver = "2"

# this lets you use `cargo fix`!
[[bin]]
name = "is31fl3743b-embassy"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
